Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-9234

TerminateProcess on a process that has not done initialization keeps a zombie around indefinitely

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.0
    • NTCore, Win32SS
    • None

    Description

      Steps to reproduce:

      • Create a process with CREATE_SUSPENDED so it won't call any initialization routines
      • Call TerminateProcess on that process

      I've added a test for this in kernel32_apitest:TerminateProcess that complains about the resulting zombie process: https://reactos.org/sites/all/modules/reactos/testman/detail.php?id=19273891&prev=0

      My guess so far is that csrss is keeping a handle open to this process, but that's not yet verified.

      Attachments

        Activity

          People

            ThFabba ThFabba
            ThFabba ThFabba
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: