[KERNEL32_APITEST] - Add a test for process termination behavior. This shows that CreateProcess with CREATE_SUSPENDED followed by TerminateProcess causes a handle leak. CORE-9234

svn path=/trunk/; revision=66367